--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
     "dev": "nodemon --exec ts-node ./src/index.ts",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
